[metadata]
name = acyclicnet
version = 0.0.1
author = Gabriel Cordovado
author_email = gabe.cordovado@yahoo.ca
description = A pythonic framework promoting the use of decentralized architectures involving messaging, data storage, and API requests
long_description = file: README.md
long_description_content_type = text/markdown
url = cordovado.me/venezia
classifiers = 
    Programming Language :: Python :: 3
    Licence :: OSI Approved :: MIT Licence
    Operating System :: OS Independant

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.9

[options.packages.find]
where = src
